finished to style the page, align images and fixe some hight issues

--- a/styling/style.css
+++ b/styling/style.css
@@ -170,7 +170,7 @@ header {
   left: auto;
   width: 100%;
   min-width: 100%;
-  background: url('assets/your_verse_hero.jpg') no-repeat 50% 100%;
+  background: url('https://web.archive.org/web/20140228114747im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg') no-repeat 50% 100%;
   background-color: transparent;
 }
 
